[tool.poetry]
name = "m3u8-download"
version = "0.1.0"
description = ""
authors = ["smith"]
readme = "README.md"
packages = [{include = "m3u8_download"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
m3u8 = "^3.6.0"
pycryptodome = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
